--- a/Selecao/Selecao-Web/src/main/resources/application.properties
+++ b/Selecao/Selecao-Web/src/main/resources/application.properties
@@ -7,8 +7,8 @@ server.port=9090
 # defini\u00e7\u00f5es do datasource
 spring.datasource.url=jdbc:oracle:thin:@localhost:1521:XE
 spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
-spring.datasource.username=REDE
-spring.datasource.password=REDE
+spring.datasource.username=SELECAO
+spring.datasource.password=SELECAO
 
 # defini\u00e7\u00f5es do hibernate
 spring.jpa.hibernate.ddl-auto=update
