feat(Captcha): adicionar servico de captcha e configuração necessária.

--- a/Selecao/Selecao-Web/pom.xml
+++ b/Selecao/Selecao-Web/pom.xml
@@ -37,6 +37,10 @@
             <optional>true</optional>
         </dependency>
         <dependency>
+            <groupId>org.apache.httpcomponents</groupId>
+            <artifactId>httpclient</artifactId>
+        </dependency>
+        <dependency>
             <groupId>com.oracle</groupId>
             <artifactId>ojdbc6</artifactId>
             <version>11.2.0.3</version>
