--- a/Selecao/Selecao-Web/src/main/resources/application.properties
+++ b/Selecao/Selecao-Web/src/main/resources/application.properties
@@ -19,3 +19,11 @@ spring.jpa.hibernate.format_sql=true
 spring.jackson.date-format=dd-MM-yyyy
 spring.jackson.time-zone=America/Sao_Paulo
 
+# Recaptcha
+recaptcha.url=https://www.google.com/recaptcha/api/siteverify
+recaptcha.site-key=6LcUhyMTAAAAABPX40yyDe8DzhWp3U8_N69d7lD6
+recaptcha.secret-key=6LcUhyMTAAAAAC-dZopohaNW-G1P00sVS9_Rzhkd
+
+# Tomcat
+server.tomcat.remote_ip_header=x-forwarded-for
+server.tomcat.protocol_header=x-forwarded-proto
