--- a/Selecao/Selecao-Service/pom.xml
+++ b/Selecao/Selecao-Service/pom.xml
@@ -18,6 +18,21 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter</artifactId>
         </dependency>
+        <dependency>
+           <groupId>com.sun.mail</groupId>
+           <artifactId>javax.mail</artifactId>
+           <version>1.5.2</version>
+       </dependency>
+       <dependency>
+           <groupId>javax.activation</groupId>
+           <artifactId>activation</artifactId>
+           <version>1.1.1</version>
+       </dependency>
+       <dependency>
+           <groupId>org.apache.commons</groupId>
+           <artifactId>commons-email</artifactId>
+           <version>1.4</version>
+       </dependency>
     </dependencies>
     <name>Selecao-Service</name>
 </project>
