feat(Teste): adicionar classe de teste.

--- a/.gitignore
+++ b/.gitignore
@@ -53,3 +53,4 @@ bld/
 /Selecao/Selecao-Security/target/
 /Selecao/Selecao-Service/target/
 /Selecao/Selecao-Web/target/
+/Selecao/Selecao-Service/nbproject/
