--- a/Selecao/Selecao-Service/pom.xml
+++ b/Selecao/Selecao-Service/pom.xml
@@ -33,6 +33,23 @@
            <artifactId>commons-email</artifactId>
            <version>1.4</version>
        </dependency>
+       <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-all</artifactId>
+            <version>1.9.5</version>
+        </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.12</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.hamcrest</groupId>
+            <artifactId>hamcrest-core</artifactId>
+            <version>1.3</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
     <name>Selecao-Service</name>
 </project>
