--- a/Selecao/Selecao-Entity/pom.xml
+++ b/Selecao/Selecao-Entity/pom.xml
@@ -30,6 +30,16 @@
             <version>4.1.0.RELEASE</version>
             <type>jar</type>
         </dependency>
+        <dependency>
+            <groupId>javax.validation</groupId>
+            <artifactId>validation-api</artifactId>
+            <version>1.1.0.Final</version>
+        </dependency>
+        <dependency>
+            <groupId>org.hibernate</groupId>
+            <artifactId>hibernate-validator</artifactId>
+            <version>4.1.0.Final</version>
+        </dependency>
     </dependencies>
     <name>Selecao-Entity</name>
 </project>
