test(AdministrativoController): adicionar classe de testes.

--- a/.gitignore
+++ b/.gitignore
@@ -54,3 +54,4 @@ bld/
 /Selecao/Selecao-Service/target/
 /Selecao/Selecao-Web/target/
 /Selecao/Selecao-Service/nbproject/
+/Selecao/Selecao-Web/nbproject/
