refactor(EmailService): Passar todo serviço de email para nativo do spring e descartar dependencias de api externa

--- a/Selecao/Selecao-Web/src/main/resources/application.properties
+++ b/Selecao/Selecao-Web/src/main/resources/application.properties
@@ -27,3 +27,14 @@ recaptcha.secret-key=6LcUhyMTAAAAAC-dZopohaNW-G1P00sVS9_Rzhkd
 # Tomcat
 server.tomcat.remote_ip_header=x-forwarded-for
 server.tomcat.protocol_header=x-forwarded-proto
+
+#Email
+spring.mail.host=smtp.gmail.com
+spring.mail.username=processoseletivocwi@gmail.com
+spring.mail.password=cwisoftware2
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.socketFactory.port=465
+spring.mail.properties.mail.smtp.socketFactory.class=javax.net.ssl.SSLSocketFactory
+
+spring.mail.properties.mail.smtp.socketFactory.fallback=false
+
