--- a/Selecao/Selecao-Entity/pom.xml
+++ b/Selecao/Selecao-Entity/pom.xml
@@ -40,6 +40,11 @@
             <artifactId>hibernate-validator</artifactId>
             <version>4.1.0.Final</version>
         </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-annotations</artifactId>
+            <version>2.0.0</version>
+        </dependency>
     </dependencies>
     <name>Selecao-Entity</name>
 </project>
