feat(Favicon): personalizar favicon.

--- a/Selecao/Selecao-Web/src/main/resources/application.properties
+++ b/Selecao/Selecao-Web/src/main/resources/application.properties
@@ -37,3 +37,4 @@ spring.mail.properties.mail.smtp.socketFactory.class=javax.net.ssl.SSLSocketFact
 
 spring.mail.properties.mail.smtp.socketFactory.fallback=false
 
+spring.mvc.favicon.enabled=false
