feat(Calendario)  - calendario implementado com odas funcionalidades.

--- a/Selecao/Selecao-Web/src/main/resources/application.properties
+++ b/Selecao/Selecao-Web/src/main/resources/application.properties
@@ -26,7 +26,8 @@ recaptcha.secret-key=6LcUhyMTAAAAAC-dZopohaNW-G1P00sVS9_Rzhkd
 # Tomcat
 server.tomcat.remote_ip_header=x-forwarded-for
 server.tomcat.protocol_header=x-forwarded-proto
-
+server.compression.enabled=true
+server.compression.mime-types=application/json,application/xml,text/html,text/xml,text/plain
 #Email
 spring.mail.host=smtp.gmail.com
 spring.mail.username=processoseletivocwi@gmail.com
