--- a/Selecao/Selecao-Web/src/main/resources/application.properties
+++ b/Selecao/Selecao-Web/src/main/resources/application.properties
@@ -12,8 +12,9 @@ spring.datasource.password=SELECAO
 
 # defini\u00e7\u00f5es do hibernate
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.hibernate.show_sql=true
-spring.jpa.hibernate.format_sql=true
+spring.jpa.properties.hibernate.show_sql=true
+spring.jpa.properties.hibernate.use_sql_comments=true
+spring.jpa.properties.hibernate.format_sql=true
 
 # JSON format
 spring.jackson.time-zone=America/Sao_Paulo
